# my-packages

./: pyproject.toml
dData/: dData.ipynb  dData.py
development/: general.ipynb
src/my_packages.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/toolsGeneral/: logger.py  main.py
src/toolsOSM/: overpass.py
src/toolsPandas/: helpers.py
src/toolsSync/: main.py
toolsGeneral/: logger.py  main.py
toolsOSM/: overpass.py
toolsPandas/: helpers.py
