[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-packages"
version = "0.2.0"
description = "My personal utility packages"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = [
    "toolsOSM",
    "toolsPandas",
    "toolsGeneral"
]
